# DeepSoccer

./: PC_Benewake_TFmini_LiDAR.py  README.md  RL_model_froze.ipynb  env_test.py  floor_segmentation.py  jetbot_ros.py  jetbot_soccer_infrared.py  jetbot_soccer_lidar.py  jetbot_soccer_motors.py  jetbot_soccer_roller.py  jetbot_soccer_solenoid.py  jetson_soccer_main.py  segmentation.ipynb  segmentation_kaggle.ipynb  style_transfer.ipynb  teleoperation.ipynb  teleoperation_soccer.ipynb
.github/: FUNDING.yml
ForgER/: agent.py  model.py  replay_buff.py  sum_tree.py
deepsoccer/deepsoccer_control/: CMakeLists.txt  package.xml
deepsoccer/deepsoccer_description/: package.xml
deepsoccer/deepsoccer_gazebo/: CMakeLists.txt
deepsoccer_jetson/: README.md  teleoperation_soccer.ipynb
deepsoccer_jetson/launch/: start.launch
deepsoccer_jetson/scripts/: deepsoccer_lidar.py  deepsoccer_main.ipynb  deepsoccer_main.py  deepsoccer_roller.py  deepsoccer_solenoid.py
deepsoccer_pc/: README.md
deepsoccer_pc/deepsoccer_description/: CMakeLists.txt
deepsoccer_pc/deepsoccer_gazebo/: package.xml
deepsoccer_ros/: CMakeLists.txt  package.xml
etc/: deepsoccer_jupyter.service  deepsoccer_roller.py  deepsoccer_stats.service  opencv_gst_camera.py  teleoperation_soccer.ipynb
gazebo_joint_torsional_spring_plugin/: CMakeLists.txt  README.md  package.xml
jetbot/jetbot_control/: CMakeLists.txt  (+1 more)
my_deepsoccer_training/: CMakeLists.txt  package.xml
sim2real/: Jetson_Nano_Sim2Real.ipynb  README.md  floor_segmentation.py  sim2real_soccer.ipynb  teleoperation_soccer.ipynb
skeleton/: ____.step.stl  ______.step.stl  ____msbr.stl  config.json  gearbox.stl  m3_20mm_supporter.stl  motor.stl  output_shaft.stl  part_6.stl  pcb.step.stl  prt0003.stl  prt0007.stl  robot.urdf  solenoid_body.stl
solenoid_electromagnet_joint_spring_plugin/: CMakeLists.txt  LICENSE  README.md  package.xml
solenoid_electromagnet_joint_spring_plugin/src/: solenoid_electromagnet_joint_spring_plugin.cpp
unit_test/: infrared_input.py  lidar_uart.py  roller_out.py
(+289 files in other folders)
